# Dontmove

./: CMakeLists.txt  CMakePresets.json  README.md  install.nsi  license_cn.txt  license_en.txt
resources/: resources.qrc
src/: main.cpp
src/common/: constants.h  types.h
src/core/: emergency_unlocker.cpp  emergency_unlocker.h  hotkey_manager.cpp  hotkey_manager.h  input_blocker.cpp  input_blocker.h
src/platform/: win32_api.cpp  win32_api.h
src/services/: logger.cpp  logger.h  settings_manager.cpp  settings_manager.h  tray_service.cpp  tray_service.h
src/ui/: main_window.cpp  main_window.h  settings_window.cpp  settings_window.h  win11_style.cpp  win11_style.h
